tests/ui/resolve/private-constructor-self-issue-147343.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> $DIR/private-constructor-self-issue-147343.rs:11:9
   |
LL |         S(self);
   |         ^
   |
   = note: constructor is not visible here due to private fields

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
